# draft-watch

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  installer.iss
.github/workflows/: release.yml
assets/: Icon.xcf
docs/: session-schema.json
src/: config.rs  lcu.rs  main.rs  storage.rs  tray.rs  uploader.rs  viewer.rs
