[package]
name = "draft-watch"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
tokio = { version = "1", features = ["rt", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
tray-icon = "0.19"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef"] }
